Application is FUNCTIONAL

--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "JATE",
   "version": "1.0.0",
-  "description": "",
+  "description": "Just Another Text Editor",
+  "engines:": {
+    "node": "16.10.0",
+    "npm": "7.24.0"
+  },
   "main": "server.js",
   "scripts": {
     "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
